# ChangeLog for dev-python/Whoosh
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Sep 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -Whoosh-0.3.0_beta6.ebuild, +Whoosh-0.3.0_beta24.ebuild:
  Version bump.

  25 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -Whoosh-0.3.0_beta5.ebuild, +Whoosh-0.3.0_beta6.ebuild:
  Version bump.

  20 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -Whoosh-0.3.0_beta3.ebuild, +Whoosh-0.3.0_beta5.ebuild:
  Version bump.

  19 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -Whoosh-0.2.6.ebuild, +Whoosh-0.3.0_beta3.ebuild:
  Version bump. If anyone still needs 0.2, please let me know.

  16 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  +Whoosh-0.1.24.ebuild, +Whoosh-0.2.6.ebuild, +metadata.xml:
  New ebuilds for dev-python/Whoosh (bug #281095), one for current version
  and the other for 0.1 branch required by django-haystack.
