@@ -1,6 +1,4 @@
-DIST Whoosh-0.1.24.tar.gz 127197 RMD160 0d316ed16afcbb8b6d391d2f65e67f2694666cdb SHA1 5a9c354ca2a6f8f528b7d12053021016ac17482e SHA256 0a3385034bb5f67d032ef16b7c9aa9f9f7ea4617cfeb0ab8514d86c5e88e20ee
 DIST Whoosh-0.3.0b24.tar.gz 152619 RMD160 0fa0978df65e38f25474a6397e1e78a5ba321faf SHA1 8f89c20a98d6d73eca6d75f1051c634b279d4bf2 SHA256 a2aa8400b4f2663506649b8a02af7298a6c884cb0eda6025b472c3da1abab8a4
-EBUILD Whoosh-0.1.24.ebuild 364 RMD160 f586fcd908abf6b8b307c46620949e7af11c4b2e SHA1 32dcac664e39aa895374c19e919442d802a85c70 SHA256 95ea278c1335cfa827a8a38cc3ac09c03d4ea061178e937015599abcc86a8a20
 EBUILD Whoosh-0.3.0_beta24.ebuild 432 RMD160 7fc592e169cbec8232a3963e1d6c5ebd76861a7e SHA1 0fa24abed657c30936ea4c5a0aced56b4cecec2d SHA256 231e1149a6a33fafda687b37dfe7d7ac9b9d64c20e95d89a907b854c7922e206
-MISC ChangeLog 978 RMD160 f2ace1d8567b02ac94561f65e9f9c1cc21ce1e6b SHA1 b519bb7b3d3454fbf80ec87fa05cd6c24ae5d3ed SHA256 ef4e5174adbc29045fca683170dc153a5049e5e6c2077edcfc7742c38973456e
+MISC ChangeLog 1110 RMD160 82e8084517524dd41028e8585bb6e31e9011068f SHA1 0ff8de0800b2b50a6e9a471687f9aed28d4e7f0c SHA256 2ef37aba767c1faa653423ef0d903692ef11e7634e103493e20d7bf363d0286a
 MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
