@@ -1,14 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit distutils
-
-DESCRIPTION="Fast, pure-Python full text indexing and search library"
-HOMEPAGE="http://whoosh.ca"
-SRC_URI="http://pypi.python.org/packages/source/W/${PN}/${P}.tar.gz"
-
-LICENSE="Apache-2.0"
-SLOT="0"
-KEYWORDS="~amd64"
-IUSE=""
