@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Sep 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
+  -Whoosh-0.1.24.ebuild:
+  Old version no longer used by anything.
+
   07 Sep 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
   -Whoosh-0.3.0_beta6.ebuild, +Whoosh-0.3.0_beta24.ebuild:
   Version bump.
